--- a/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/hello.html
+++ b/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/hello.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>Hello Extensiasdsadons</h1>
+    <p><button onclick="curr_window()">Something here!</button></p>
     <script src="popup.js"></script>
+    <script src="background.js"></script>
   </body>
 </html>
