readme and bug fix

--- a/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/hello.html
+++ b/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/hello.html
@@ -1,8 +1,12 @@
 <html>
   <body>
-    <h1>Hello Extensiasdsadons</h1>
-    <p><button onclick="curr_window()">Something here!</button></p>
-    <script src="popup.js"></script>
-    <script src="background.js"></script>
+    <h1></h1>
+    <h2>Sources:</h2>
+    <ul>
+      <li>We draw from <a href="mediabiasfactcheck.com">mediabiasfactcheck.com</a> for their ratings and analyses</li>
+      <li>We use the following to sample relevant sources: "Clemm von Hohenberg, B., Menchen-Trevino, E., Casas, A., Wojcieszak, M. (2021). A list of over 5000 US news domains and
+      their social media accounts. https://doi.org/10.5281/zenodo.7651047"
+      </li>
+    </ul>
   </body>
 </html>
